# timeturner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  README.md  pyproject.toml  tox.ini
.zed/: debug.json
tests/: conftest.py  helpers.py  test_db.py  test_hamster_loader.py  test_helper.py  test_migrations.py  test_parser.py  test_timeturner.py  test_timeturner_highlevel.py  test_version.py
tests/data/: empty-hamster-report.txt  hamster-report.txt
timetracker/: db.py  parser.py  run.py
timeturner/: __init__.py  db.py  helper.py  loader.py  models.py  parser.py  rich_output.py  run.py  settings.py  timeturner.py
timeturner/tools/: boltons_iterutils.py
