[project]
name = "timeturner"
version = "0.5.1"
description = ""
authors = [{ name = "Olaf Gladis", email = "olaf@gladis.org" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "rich",
    "typer-slim[standard]",
    "pydantic>=1.10.5,<2",
    "tomlkit>=0.11.6,<0.12",
]

[project.scripts]
timeturner = "timeturner.run:entrypoint"
tt = "timeturner.run:entrypoint"

[dependency-groups]
dev = [
    "pip-audit>=2.4.14,<3",
    "pytest>=7.2.1,<8",
    "freezegun>=1.2.2,<2",
    "pytest-dependency>=0.5.1,<0.6",
    "pyright>=1.1.298,<2",
    "pytest-cov>=4.0.0,<5",
    "ruff>=0.0.254,<0.0.255",
    "tox-uv>=1.7.0,<2",
    "pytest-watcher>=0.4.2,<0.5",
]

[tool.hatch.build.targets.sdist]
include = ["timeturner"]

[tool.hatch.build.targets.wheel]
include = ["timeturner"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.10"
useLibraryCodeForTypes = true

[tool.coverage.run]
branch = true
source = ["timeturner"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "^\\s+\\.\\.\\.",
]
show_missing = true

[tool.ruff.per-file-ignores]
"tests/test_hamster_loader.py" = ["E501"]
