[project]
name = "timeturner"
version = "0.6.0"
description = ""
authors = [{ name = "Olaf Gladis", email = "olaf@gladis.org" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "rich",
    "typer-slim[standard]",
    "pydantic>=2,",
    "tomlkit>=0.11.6,<0.12",
    "pydantic-settings>=2.9.1",
]

[project.scripts]
timeturner = "timeturner.run:entrypoint"
tt = "timeturner.run:entrypoint"

[tool.hatch.build.targets.sdist]
include = ["timeturner"]

[tool.hatch.build.targets.wheel]
include = ["timeturner"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.10"
useLibraryCodeForTypes = true

[tool.coverage.run]
branch = true
source = ["timeturner"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "^\\s+\\.\\.\\.",
]
show_missing = true

[tool.ruff.per-file-ignores]
"tests/test_hamster_loader.py" = ["E501"]

[tool.uv]
dev-dependencies = [
    "freezegun>=1.5.2",
    "pip-audit>=2.9.0",
    "pyright>=1.1.402",
    "pytest-cov>=6.2.1",
    "pytest-dependency>=0.6.0",
    "pytest-watcher>=0.4.3",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "tox-uv>=1.26.0",
]
